# blogger-public-example

./: .gitignore  CONFIGURATION_PLACEHOLDERS.md  README.md  cloudbuild-destroy.yaml  cloudbuild-tf-report.yaml  cloudbuild.yaml  dev-message-regenerate.sh  dev-message-ts.sh  dev-message.sh  git-commit-push.sh  run-destroy.sh  run-report.sh
.cursor/rules/: backend_rules.mdc
dev_docs/: CONFIGURATION_PLACEHOLDERS_IMPLEMENTATION.md  cloud-build-plan.md  migration-plan.md  py-service-contract.md  python-migration.md  regeneration_fix.md  rough-plan.md  terraform-plan.md  terraform-report.md  ts-service-contract.md
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: AcceptedPostDetail.tsx  Dashboard.tsx  Home.tsx  Login.tsx  PostDetail.tsx  Router.tsx  index.css  vite-env.d.ts
functions/addFormPayloadEvent/: index.js  (+2 more)
services/processor-service-py/: Dockerfile  README.md  pyproject.toml
services/processor-service-py/src/: config.py  main.py  models.py
services/processor-service-py/src/controllers/: message_processor.py
services/processor-service-py/src/services/: blog_generator.py  firestore.py  logger.py  pubsub.py
services/processor-service-py/src/services/ai/: base.py  google_genai_adapter.py  openai_adapter.py
terraform/: .gitignore  .terraform.lock.hcl  SECRET_MANAGER_SETUP.md  apis.tf  artifact_registry.tf  backend.tf  cloud_function.tf  cloud_run.tf  firestore.rules  firestore.tf  iam.tf  providers.tf  pubsub.tf  secrets.tf  service_accounts.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
(+36 files in other folders)
